# fusion-council-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: models.yaml
docs/: OPERATIONS.md  Phase-10-Long-Term-Governance.md  Phase-9-Cutover-Runbook.md  deployment.md  rca-run-c908a00b1c834b8eb9ebe2b4-m3-mismatch.md
migrations/: env.py
scripts/: integration_test.py  sync-provider-keys.sh
tests/: __init__.py  conftest.py  test_answers_contract_smoke.py  test_auth.py  test_cancellation.py  test_candidate_metrics.py  test_checkpoint_retention.py  test_checkpoint_snapshot.py  test_council_e2e.py  test_council_live_streaming_and_verifier.py  test_db_pool_config.py  test_db_schema_postgres_compat.py  test_decision_log_phase1.py  test_decision_log_phase2.py  test_degradation.py  test_events_history_route.py  test_fusion_nodes_option_a.py  test_immediate_quarantine.py  test_langgraph_option_a.py  test_langgraph_single_happy_path.py  test_logging_utils.py  test_memory_context_phase4.py  test_metrics.py  test_model_selection_service.py  test_models.py  test_openai_compatible_provider_phase2.py  test_orchestration_checkpoint.py  test_orchestration_checkpoint_sync.py  test_orchestration_foundations.py  test_orchestration_nodes_council_phase6.py  test_orchestration_nodes_fusion_phase5.py  test_orchestration_router.py  test_orchestration_state.py  test_orchestrator_node_timeout_e1.py  test_outcome_api_phase5.py  test_phase2_worker_structured_e2e.py  test_provider_failover.py  test_quarantine_state.py  test_reconcile_provider_health.py  (+17 more)
(+62 files in other folders)
